--- a/static/index.html
+++ b/static/index.html
@@ -105,7 +105,7 @@
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ youtube_url: url })
+                    body: JSON.stringify({ url: url })
                 });
 
                 const data = await response.json();
